modificações na apresentação intro

--- a/aulas/01-introducao-ml/slides-intro.html
+++ b/aulas/01-introducao-ml/slides-intro.html
@@ -37,7 +37,7 @@ class: center, middle, inverse, title-slide
 
 # Programa do curso
 
-- 22/10 (seg) - **Introdução ao Machine Learning, Estratégias e ambientação ao R e RStudio**
+- 22/10 (seg) - **Introdução ao Machine Learning e ambientação ao R e RStudio**
 
 - 24/10 (qua) - **Estratégias gerais: separação da base de dados, reamostragem, tuning de modelos, métricas de performance**
 
@@ -57,7 +57,7 @@ class: center, middle, inverse, title-slide
 
 * Aulas expositivas com exercícios ao decorrer e ao final das aulas.
 
-* Parada para café às 20h20.
+* Parada para café às 20h30.
 
 ---
 
@@ -237,7 +237,7 @@ class: middle, center, inverse
 
 ---
 
-&lt;img src="https://wordstream-files-prod.s3.amazonaws.com/s3fs-public/styles/simple_image/public/images/machine-learning1.png?Q_SmWhhhAEOO_32HNjPhcxsPhreWV26o&amp;itok=yjEJbEKD" style=" display: block; margin-left: auto; margin-right: auto;"&gt;&lt;/img&gt;
+&lt;img src="https://wordstream-files-prod.s3.amazonaws.com/s3fs-public/styles/simple_image/public/images/machine-learning1.png?Q_SmWhhhAEOO_32HNjPhcxsPhreWV26o&amp;itok=yjEJbEKD" style="display: block; margin-left: auto; margin-right: auto;"&gt;&lt;/img&gt;
     </textarea>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script src="js/macro.js"></script>
