--- a/aulas/03-estrategias/slides-estrategias.html
+++ b/aulas/03-estrategias/slides-estrategias.html
@@ -34,7 +34,7 @@ class: center, middle, inverse, title-slide
 
 ---
 
-# Intuição
+# Definições
 
 
 
@@ -47,31 +47,180 @@ Obtivemos o seguinte banco de dados
 
 &lt;img src="slides-estrategias_files/figure-html/unnamed-chunk-2-1.png" style="display: block; margin: auto;" /&gt;
 
+* O propritário não consegue interferir diretamente nas vendas, mas consegue interferir no investimento em propaganda. 
+
+---
+
+# Definições
+
+* __X1__: budget para propagandas em jornal
+* __X2__: budget para propagandas em radio
+* __X3__: budget para propagandas em TV
+
+* __Y__: qtd vendida
+
+--
+
+* __X1, X2 e X3__ são as variáveis explicativas ou independentes ou *features* ou variáveis preditoras. Também chamamos de variáveis.
+
+* Y é a variável resposta ou variável dependente. 
+
+---
+
+# Intuição
+
+`$$Y = f(X) + \epsilon$$`
+
+* `\(X = (X_1, X_2, ..., X_n)\)`
+* `\(\epsilon\)` é um termo de erro aleatório com média zero.
+
+--
+
+Uma outra forma de representar isso é escrever
+
+`$$Y \approx f(X)$$`
+
+--
+
+Machine Learning se refere a um conjunto de técnicas para estimar `\(f\)`. 
+
+--
+
+Vamos falar dos pricipais conceitos teóricos que surgem ao estimarmos `\(f\)` e de formas para avaliar as estimativas obtidas.
+
+---
+
+# Por que estimar `\(f\)`?
+
+--
+* Predição
+--
+
+* Inferência
+
+--
+
+## Predição
+
+Em muitas situações X está disponível facilmente mas, Y não é fácil de descobrir. (Ou mesmo não é possível descobrí-lo).
+
+`$$\hat{Y} = \hat{f}(X)$$`
+é uma boa estimativa.
+Neste caso não estamos interessados em como é a estimativa `\(\hat{f}\)` desde que ela apresente predições boas para `\(Y\)`.
+
+---
+
+## Predição
+
+A acurácia de uma estimativa `\(\hat{Y}\)` pode ser dividade em duas quantidades:
+
+* erro redutível
+* erro irredutível
+
+![](https://user-images.githubusercontent.com/4706822/47453479-34c88e00-d7a3-11e8-9865-4e8b8bd001b3.png)
+
+* Essa parte irredutível, significa não redutível pela escolha do modelo/algoritmo. Ela pode ser reduzida se forem coletadas outras variáveis, mais dados, etc. Qualquer coisa que possa fazer a variância de `\(\epsilon\)` diminuir.
+
+---
+
+## Inferência
+
+Em inferência estamos mais interessados em entender a relação entre as variáveis explciativas `\(X\)` e a variável resposta `\(Y\)`.
+
+Alguns exemplos:
+
+* Quais são as variáveis que estão mais relacionadas com a respostas?
+* Qual a relação entre a resposta e cada um dos preditores?
+* A relação entre `\(y\)` e `\(X\)` pode ser resumida por um modelo linear ou a relação é mais complexa?
+
+--
+
+Neste curso, vamos principalmente sobre **predição**.
+
+---
+
+# Como estimamos `\(f\)`?
+
+Para estimar `\(f\)`, coletamos um conjunto de pares `\((X, Y)\)` e usamos algum algoritmo para encontrar uma `\(f\)` tal que `\(Y \approx f(X)\)`.
+
+Os modelos estão basicamnte dividios em duas classes:
+
+* Paramétricos
+* Não paramétricos
+
+---
+
+## Paramétricos
+
+Assumem uma forma funcional para `\(f\)` e depois estimam parâmetros. 
+
+--
+
+Podemos assumir que `\(f\)` possui a forma funcional linear:
+
+`$$f(X) = \beta_1*X_1 + \beta_2*X_2 + ... + \beta_p*X_p$$`
+
+E depois ajustamos/treinamos essa forma funcional para encontrar `\(\beta_1, \beta_2, ..., \beta_p\)` tal que:
+
+`$$Y \approx \beta_1*X_1 + \beta_2*X_2 + ... + \beta_p*X_p$$`
+---
+
+## Paramétricos
+
+Chamamos de paramétricos pois reduzimos o problema de estimar `\(f\)` para o problema de estimar um conjunto de parâmetros `\(\beta\)`.
+
+Desvantagens:
+
+--
+
+* geralmente a forma funcional que escolhemos para `\(f\)` não é a forma forma funcional da verdadeira `\(f\)`.
+* podemos aumentar o número de parâmetros, mas em geral isso leva ao overfitting.
+
+--
+
+Vantagens:
+
+--
+
+* em geral é computacionalmente mais eficiente
+* em geral precisa de menos observações
 
 
 ---
 
-# Intuição (continuação)
+## Não-paramétricos
 
-&lt;img src="slides-estrategias_files/figure-html/unnamed-chunk-3-1.png" style="display: block; margin: auto;" /&gt;
+Não fazem suposições explícitas sobre a forma funcional de `\(f\)`. Estimam uma `\(f\)` que fica o mais próximo possível dos pontos de treino sem ser muito rigoroso e nem muito flexível.
 
----
-
-# Intuição (continuação)
-
-&lt;img src="slides-estrategias_files/figure-html/unnamed-chunk-4-1.png" style="display: block; margin: auto;" /&gt;
+![](https://freakonometrics.hypotheses.org/files/2015/06/boosting-algo-3.gif)
 
 ---
 
-# Intuição (continuação)
+## Não paramétricos
 
-&lt;img src="slides-estrategias_files/figure-html/unnamed-chunk-5-1.png" style="display: block; margin: auto;" /&gt;
+**Vantagens**
+
+* A principal vantagem sobre os modelos paramétricos é que por não fazerem suposiçõe sobre a forma de `\(f\)` podem se ajustar bem á diversas formas possíveis de `\(f\)`. 
+
+**Desvantagens**
+
+* Em geral precisa de mais observações para ficar bom.
+* Pode ser mais custoso computacionalmente
 
 ---
 
-# Intuição (continuação)
+# Flexibilidade ou Intertabilidade?
 
-&lt;img src="slides-estrategias_files/figure-html/unnamed-chunk-6-1.png" style="display: block; margin: auto;" /&gt;
+![](https://user-images.githubusercontent.com/4706822/47456108-01d5c880-d7aa-11e8-899a-74804f74afc5.png)
+
+---
+
+# Regressão e Classificação
+
+Existem dois principais tipos de problemas em Machine Learning:
+
+* Regressão
+* Classificação
 
 ---
 
@@ -86,7 +235,7 @@ Para problemas de regressão:
 
 ---
 
-# Estimando a performance (cont)
+# Estimando a performance
 
 Para problemas de classificação:
 
@@ -98,9 +247,10 @@ Onde `\(p\)` é a taxa de resposta.
 
 ---
 
-# Estimando a performance (cont)
+# Estimando a performance
 
 * Área sobre a curva ROC.
+* KS
 * Sensibilidade: Taxa de verdadeiros positivos.
 * Especificidade: Taxa de verdadeiros negativos. 
 
@@ -109,306 +259,45 @@ Onde `\(p\)` é a taxa de resposta.
 
 ---
 
-# Exemplo: 
+# Estimando a performance
 
-&lt;img src = "img/box.png" class = "center2"&gt;
+Essas medidas podem ser calculadas na base de dados que usamos para ajustar o modelo. 
+No entanto, não estamos muito interessados no valor delas dentro da base de *treino*. 
 
-- y: Cliente cancelou o cartão: Sim/Não
+&gt; Estamos interessados nas métricas de erro/acerto para observações que não foram vistas durante o treino.
 
---
-
-
-- x: variáveis que podem interferir no cancelamento
-
---
-
-&gt; Quantidade de compras no passado.
-
---
-
-&gt; Valor total gasto no passado.
-
---
-
-&gt; Tempo desde a sua primeira compra.
-
---
-
-&gt; ...
+* **Exemplo**: Se fazemos um modelo para prever o valor de ações no mercado. Não estamos interessados no quanto acertamos para os últimos 6 meses. Estamos interessados em acertar o valor da ação amanhã, ou no próximo mês.
 
 ---
 
-# Fontes de erro
+# Estimando a performance
 
-`$$y \approx \beta_0 + \beta_1 \text{qtd} + \beta_2 \text{valor} + \beta_3 \text{tempo} + \dots$$`
+Considere que treinamos um modelo com o banco de dados:
 
---
+`$${(x_1, y_1), (x_2, y_2), ... ,(x_x, y_n)}$$`
 
-Fontes de erro:
+Portanto temos uma `\(\hat{f}\)` tal que `\(y_1 \approx \hat{f}(x_1)\)`, `\(y_2 \approx \hat{f}(x_2)\)`, ...
+Portanto poderíamos calcular o MSE do treino, fazendo:
 
-- Relação funcional entre `\(x\)` e `\(y\)`
+`$$MSE = \sum_{i = 1}^{n} (y_i - \hat{f}(x_i))^2$$`
+No entanto, não estamos interessados nessa medida. Em teoria estamos interessados em:
 
---
-
-- Ausência de variáveis importantes para explicar `\(y\)`
-
---
-
-- Erro de medida
-
---
-
-- etc
-
---
-
-&lt;br&gt;
-
-- **Viés**: erro induzido por aproximar um fenômeno real, que pode pode ser extremamente complicado, por um modelo muito mais simples.
-
-
-&lt;!-- We would like our model to have minimum variance and minimum bias. But what we see in practice is that methods that reduce variance usually increases bias and vice-versa. --&gt;
+`$$MSE = Média((y_0 - \hat{f}(x_0))^2)$$`
+Em que ($x_0$, `\(y_0\)`) é uma observação nova. (Não conhecida pelo modelo).
 
 ---
 
-# Generalização
+# Como estimamos o MSE para novas observações?
 
-Será que o modelo ajustado será útil para estimar se um novo cliente irá cancelar o cartão?
-
---
-
-- **Variância**: o quanto as estimativas dos parâmetros mudariam se nós os estimarmos usando uma base diferente. 
-
-&lt;br&gt;
-
---
-
-Trade-off: gostaríamos que nosso modelo tenha viés e variância mínimos, mas o que vemos na prática é que os métodos para redução da variância geralmente aumentam o viés e vice-versa.
+Podemos separar uma parte da base de dados que não será conhecida para o modelo no momento do ajuste.
 
 ---
 
-# Exemplo
-
-Vamos encontrar um bom modelo para ajustar esse conjunto de 10 pontos.
-
-&lt;img src="slides-estrategias_files/figure-html/unnamed-chunk-7-1.png" style="display: block; margin: auto;" /&gt;
-
----
-
-# Exemplo
-
-**Regressão linear simples**: `\(y = b_0 + b_1x + e\)`
-
-&lt;img src="slides-estrategias_files/figure-html/unnamed-chunk-8-1.png" style="display: block; margin: auto;" /&gt;
-
----
-
-# Exemplo
-
-**Regressão linear simples**: `\(y = b_0 + b_1x + e\)`
-
-&lt;img src="slides-estrategias_files/figure-html/unnamed-chunk-9-1.png" style="display: block; margin: auto;" /&gt;
-
----
-
-# Exemplo
-
-**Modelo quadrático**: `\(y = b_0 + b_1x + b_2x^2 + e\)`
-
-&lt;img src="slides-estrategias_files/figure-html/unnamed-chunk-10-1.png" style="display: block; margin: auto;" /&gt;
-
----
-
-# Exemplo
-
-&lt;table&gt;
- &lt;thead&gt;
-  &lt;tr&gt;
-   &lt;th style="text-align:center;"&gt; Grau do polinômio &lt;/th&gt;
-   &lt;th style="text-align:center;"&gt; RMSE &lt;/th&gt;
-  &lt;/tr&gt;
- &lt;/thead&gt;
-&lt;tbody&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 1 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.204 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 2 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.149 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 3 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.140 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 4 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.140 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 5 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.102 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 6 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.086 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 7 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.063 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 8 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.031 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 9 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.000 &lt;/td&gt;
-  &lt;/tr&gt;
-&lt;/tbody&gt;
-&lt;/table&gt;
-
-
----
-
-# Exemplo
-
-**Modelo polinomial de grau nove**: `\(y = b_0 + b_1x + b_2x^2 + \cdots + b_9x^9 + e\)`
-
-&lt;img src="slides-estrategias_files/figure-html/unnamed-chunk-12-1.png" style="display: block; margin: auto;" /&gt;
-
----
-# Exemplo
-
-E se nós obtermos mais dados? As curvas representam os modelos ajustados com os 10 pontos iniciais.
-
-&lt;img src="slides-estrategias_files/figure-html/unnamed-chunk-13-1.png" style="display: block; margin: auto;" /&gt;
-
----
-
-# Exemplo
-
-&lt;table&gt;
- &lt;thead&gt;
-  &lt;tr&gt;
-   &lt;th style="text-align:center;"&gt; Grau do polinômio &lt;/th&gt;
-   &lt;th style="text-align:center;"&gt; RMSE &lt;/th&gt;
-  &lt;/tr&gt;
- &lt;/thead&gt;
-&lt;tbody&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 1 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.360 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 2 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.226 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 3 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.199 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 4 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.198 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 5 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.289 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 6 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.360 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 7 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.320 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 8 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 1.152 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 9 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 3.904 &lt;/td&gt;
-  &lt;/tr&gt;
-&lt;/tbody&gt;
-&lt;/table&gt;
-
----
-
-# Over-fitting
-
-- Over-fitting ocorre quando o modelo absorve de forma inadequada comportamentos da amostra que não são generalizáveis para novas observações.
-
-- No exemplo, uma escolha ruim do grau do polinômio está gerando over-fitting.
-
----
-
-# Exemplo
-
-Agora ajustando nos dados novos.
-
-&lt;img src="slides-estrategias_files/figure-html/unnamed-chunk-15-1.png" style="display: block; margin: auto;" /&gt;
-
----
-
-# Exemplo
-
-&lt;table&gt;
- &lt;thead&gt;
-  &lt;tr&gt;
-   &lt;th style="text-align:center;"&gt; Grau do polinômio &lt;/th&gt;
-   &lt;th style="text-align:center;"&gt; RMSE &lt;/th&gt;
-  &lt;/tr&gt;
- &lt;/thead&gt;
-&lt;tbody&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 1 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.206 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 2 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.089 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 3 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.089 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 4 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.089 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 5 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.089 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 6 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.089 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 7 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.087 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 8 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.087 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:center;"&gt; 9 &lt;/td&gt;
-   &lt;td style="text-align:center;"&gt; 0.087 &lt;/td&gt;
-  &lt;/tr&gt;
-&lt;/tbody&gt;
-&lt;/table&gt;
+# Exemplo no R
 
 ---
 
 # Estimando a performance do modelo
-
-Como estimar o viés e a variância do modelo?
-
---
 
 - **Erro de treino**: é o erro encontrado ao aplicar o modelo na própria base utilizada para treiná-lo.
 
@@ -447,13 +336,13 @@ E como fazemos para determinar os parâmetros de complexidade?
 
 # LOOCV
 
-&lt;img src="img/loocv.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/loocv.png" width="644" style="display: block; margin: auto;" /&gt;
 
 ---
 
 # k-fold
 
-&lt;img src="img/k-fold-cv.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="img/k-fold-cv.png" width="609" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -501,7 +390,7 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
 (function () {
   var script = document.createElement('script');
   script.type = 'text/javascript';
-  script.src  = 'https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-MML-AM_CHTML';
+  script.src  = 'https://cdn.bootcss.com/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML';
   if (location.protocol !== 'file:' && /^https?:/.test(script.src))
     script.src  = script.src.replace(/^https?:/, '');
   document.getElementsByTagName('head')[0].appendChild(script);
